# OpenAlpha

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  installtion guide.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  main.py  router.py
backend/app/agents/: base.py  bear_case_agent.py  bull_case_agent.py  data_collector_agent.py  news_sentiment_agent.py  report_writer_agent.py  risk_review_agent.py  technical_agent.py  thesis_agent.py
backend/app/core/: config.py  secrets.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/llm/: base.py  factory.py
backend/app/marketdata/: base.py
backend/tests/: test_analysis_api.py  test_base_agent.py  test_bear_case_agent.py  test_cli.py  test_data_collector_agent.py  test_db_schema.py  test_health.py  test_llm_provider.py  test_marketdata_providers.py  test_news_providers.py  test_news_sentiment_agent.py  test_orchestrator_runner.py  test_orchestrator_schemas.py  test_performance_api.py  test_report_writer_agent.py  test_reports_api.py  test_risk_review_agent.py  test_settings_api.py  test_technical_agent.py  test_technical_indicators.py  test_thesis_agent.py
docs/: adding-a-new-agent.md  adding-a-new-provider.md  agents.md  architecture.md  installation-guide.md  providers.md
docs/assets/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/lib/: api.ts  (+3 more)
openalpha/: __init__.py  __main__.py  cli.py
(+76 files in other folders)
