[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openalpha"
version = "0.1.0"
description = "Local-first, open-source AI equity research app."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
openalpha = "openalpha.cli:main"

[tool.setuptools.packages.find]
include = ["backend*", "openalpha*"]
exclude = ["frontend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
